LOGO changes done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elite-interior-design",
+  "name": "miirus",
   "version": "1.0.0",
   "description": "Modern interior design company website built with React",
   "private": true,
