--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Modern interior design company website built with React",
   "private": true,
   "dependencies": {
+    "firebase": "^12.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -32,10 +33,3 @@
     ]
   }
 }
-
-
-
-
-
-
-
