--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "miirus",
+  "name": "elite-interior-design",
   "version": "1.0.0",
   "description": "Modern interior design company website built with React",
   "private": true,
   "dependencies": {
-    "firebase": "^12.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -33,3 +32,10 @@
     ]
   }
 }
+
+
+
+
+
+
+
